fix: use standard component for the upgrade button placement and wrap the containers in Page component.

--- a/src/homepageExperience/components/HomepageExperience.scss
+++ b/src/homepageExperience/components/HomepageExperience.scss
@@ -12,9 +12,6 @@ h1#first-mile--header {
   height: 100%;
   width: 100%;
 
-  padding-top: 71px;
-  padding-right: 85px;
-
   overflow-y: scroll;
 }
 
